Fixed card title alignment

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html {
 
 body {
   font-family: outfit, sans-serif;
-  color: #5D576B;
+  color: #5d576b;
 }
 
 .main-header {
@@ -89,9 +89,10 @@ hr {
 .card-title {
   font-size: 1.8rem;
   font-weight: 500;
+  text-align: center;
 }
 
-.card-note{
+.card-note {
   font-size: 1.2rem;
 }
 
